force-app/main/default/objects/Probe__c/Probe__c.object-meta.xml
<CustomObject>
    <label>Probe</label>
    <pluralLabel>Probes</pluralLabel>
    <nameField><label>Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>