force-app/main/default/objects/Probe__c/fields/Ctrl__c.field-meta.xml
<CustomField>
    <fullName>Ctrl__c</fullName>
    <label>Ctrl</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERCTRL plain text</description>
</CustomField>