force-app/main/default/objects/Probe__c/fields/DotDot__c.field-meta.xml
<CustomField>
    <fullName>GS..DOTDOT__c</fullName>
    <label>DotDot</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERDOT control: dots but no slash</description>
</CustomField>