force-app/main/default/objects/Probe__c/fields/EscMarkup__c.field-meta.xml
<CustomField>
    <fullName>EscMarkup__c</fullName>
    <label>EscMarkup</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERESC&lt;/description&gt;&lt;inlineHelpText&gt;INJECTED&lt;/inlineHelpText&gt;&lt;description&gt;tail</description>
</CustomField>