force-app/main/default/objects/Probe__c/fields/InvalidName__c.field-meta.xml
<CustomField>
    <fullName>GS INVALID NAME__c</fullName>
    <label>InvalidName</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERINV control: invalid but no traversal</description>
</CustomField>