force-app/main/default/objects/Probe__c/fields/Mismatch__c.field-meta.xml
<CustomField>
    <fullName>GSMISMATCHDIFFERENT__c</fullName>
    <label>Mismatch</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERMIS filename says Mismatch__c</description>
</CustomField>