force-app/main/default/objects/Probe__c/fields/Sep__c.field-meta.xml
<CustomField>
    <fullName>GSSEP/Nested__c</fullName>
    <label>Sep</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERSEP</description>
</CustomField>