force-app/main/default/objects/Probe__c/fields/Trav__c.field-meta.xml
<CustomField>
    <fullName>../../../../GSTRAVERSAL__c</fullName>
    <label>Trav</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERTRAV</description>
</CustomField>